2nd Commit with username added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>WebSocket</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -7,9 +7,8 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-        <script type="text/javascript">
+    <script type="text/javascript">
         var stompClient = null;
-
         function setConnected(connected) {
             $("#connect").prop("disabled", connected);
             $("#disconnect").prop("disabled", !connected);
@@ -43,13 +42,18 @@
         }
 
         function sendName() {
-            stompClient.send("/app/user", {}, JSON.stringify({'name': $("#name").val()}));
+            /*stompClient.send("/app/hello", {}, JSON.stringify({'message': $("#message").val()}) );*/
+            stompClient.send("/app/hello", {}, JSON.stringify({'message': $("#message").val(),'name': $("#name").val()}));
         }
+
+
 
         function showGreeting(message) {
-            $("#userinfo").append("<tr><td>" + message + "</td></tr>");
-        }
 
+            //$("#userinfo").append("<tr><td>"+ $("#userName").val() +" : " + message + "</td></tr>");
+            $("#userinfo").append("<tr><td>"+  message + "</td></tr>");
+
+        }
         $(function () {
             $("form").on('submit', function (e) {
                 e.preventDefault();
@@ -57,30 +61,43 @@
             $( "#connect" ).click(function() { connect(); });
             $( "#disconnect" ).click(function() { disconnect(); });
             $( "#send" ).click(function() { sendName(); });
+            $( "#sendName" ).click(function() { sendUserName(); });
         });
     </script>
 </head>
 <body>
-<div id="main-content" class="container">
+<div id="header">
+    <div id="logo">
+        <div id="logo_text">
+            <h1><a href=""><span class="logo_colour">Chat Room App</span></a></h1>
+            <h2>Talk With EveryOne</h2>
+        </div>
+    </div>
+</div>
+<div id="main-content" class="container" >
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" style="margin-top:20px">
             <form class="form-inline">
                 <div class="form-group">
                     <label for="connect">WebSocket connection:</label>
                     <button id="connect" class="btn btn-success" type="submit">Connect</button>
-
                     <button id="disconnect" class="btn btn-danger" type="submit" disabled="disabled">Disconnect
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <div class="row" style="margin-top:100px">
+
+    <div class="row" style="margin-top:30px">
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="name">What is your message?</label><br />
-                    <input type="text" id="name" class="form-control" placeholder="Your message here...">
+                    <label>What is your Name?</label><br />
+                    <input type="text" id ="name" class="form-control" placeholder="Your name here...">
+                    <p>
+                    </p>
+                    <label for="message">What is your message?</label><br />
+                    <input type="text" id="message" class="form-control" style="margin-right: 16px" placeholder="Your message here...">
                     <button id="send" class="btn btn-primary" type="submit">Send</button>
                 </div>
             </form>
